Update operator API docs for v3.17.4/v1.30.10

--- a/calico-enterprise_versioned_docs/version-3.17/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/reference/installation/_api.mdx
@@ -712,7 +712,7 @@ AuthenticationOIDC
 
 <em>(Optional)</em>
 <p>
-OIDC contains the configuration needed to set up OIDC authentication.
+OIDC contains the configuration needed to setup OIDC authentication.
 </p>
 
 </td>
@@ -732,7 +732,7 @@ AuthenticationOpenshift
 
 <em>(Optional)</em>
 <p>
-Openshift contains the configuration needed to set up Openshift OAuth authentication.
+Openshift contains the configuration needed to setup Openshift OAuth authentication.
 </p>
 
 </td>
@@ -752,7 +752,7 @@ AuthenticationLDAP
 
 <em>(Optional)</em>
 <p>
-LDAP contains the configuration needed to set up LDAP authentication.
+LDAP contains the configuration needed to setup LDAP authentication.
 </p>
 
 </td>
@@ -2157,7 +2157,7 @@ CollectProcessPathOption
 <em>(Optional)</em>
 <p>
 Configuration for enabling/disabling process path collection in flowlogs.
-If Enabled, this feature sets hostPID to true to read process cmdline.
+If Enabled, this feature sets hostPID to true in order to read process cmdline.
 Default: Enabled
 </p>
 
@@ -4320,7 +4320,7 @@ options are: Token, Basic, OIDC, OAuth
 
 </p>
 <p>
-AuthenticationLDAP is the configuration needed to set up LDAP.
+AuthenticationLDAP is the configuration needed to setup LDAP.
 </p>
 <table>
 <thead>
@@ -4416,7 +4416,7 @@ Group search configuration to find the groups that a user is in.
 
 </p>
 <p>
-AuthenticationOIDC is the configuration needed to set up OIDC.
+AuthenticationOIDC is the configuration needed to setup OIDC.
 </p>
 <table>
 <thead>
@@ -4609,7 +4609,7 @@ Default: &ldquo;Dex&rdquo;
 
 </p>
 <p>
-AuthenticationOpenshift is the configuration needed to set up Openshift.
+AuthenticationOpenshift is the configuration needed to setup Openshift.
 </p>
 <table>
 <thead>
@@ -4728,7 +4728,7 @@ AuthenticationOIDC
 
 <em>(Optional)</em>
 <p>
-OIDC contains the configuration needed to set up OIDC authentication.
+OIDC contains the configuration needed to setup OIDC authentication.
 </p>
 
 </td>
@@ -4748,7 +4748,7 @@ AuthenticationOpenshift
 
 <em>(Optional)</em>
 <p>
-Openshift contains the configuration needed to set up Openshift OAuth authentication.
+Openshift contains the configuration needed to setup Openshift OAuth authentication.
 </p>
 
 </td>
@@ -4768,7 +4768,7 @@ AuthenticationLDAP
 
 <em>(Optional)</em>
 <p>
-LDAP contains the configuration needed to set up LDAP authentication.
+LDAP contains the configuration needed to setup LDAP authentication.
 </p>
 
 </td>
@@ -6411,6 +6411,442 @@ Template describes the calico-node DaemonSet pod that will be created.
 </tr>
 </tbody>
 </table>
+<h3 id="operator.tigera.io/v1.CalicoNodeWindowsDaemonSet">CalicoNodeWindowsDaemonSet</h3>
+<p>
+CalicoNodeWindowsDaemonSet is the configuration for the calico-node-windows DaemonSet.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>metadata</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.Metadata">
+Metadata
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Metadata is a subset of a Kubernetes object&rsquo;s metadata that is added to the DaemonSet.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetSpec">
+CalicoNodeWindowsDaemonSetSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the specification of the calico-node-windows DaemonSet.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.CalicoNodeWindowsDaemonSetContainer">CalicoNodeWindowsDaemonSetContainer</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodSpec">CalicoNodeWindowsDaemonSetPodSpec</a>)
+
+</p>
+<p>
+CalicoNodeWindowsDaemonSetContainer is a calico-node-windows DaemonSet container.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>name</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+Name is an enum which identifies the calico-node-windows DaemonSet container by name.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>resources</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#resourcerequirements-v1-core">
+Kubernetes core/v1.ResourceRequirements
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Resources allows customization of limits and requests for compute resources such as cpu and memory.
+If specified, this overrides the named calico-node-windows DaemonSet container&rsquo;s resources.
+If omitted, the calico-node-windows DaemonSet will use its default value for this container&rsquo;s resources.
+If used in conjunction with the deprecated ComponentResources, then this value takes precedence.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.CalicoNodeWindowsDaemonSetInitContainer">CalicoNodeWindowsDaemonSetInitContainer</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodSpec">CalicoNodeWindowsDaemonSetPodSpec</a>)
+
+</p>
+<p>
+CalicoNodeWindowsDaemonSetInitContainer is a calico-node-windows DaemonSet init container.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>name</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+Name is an enum which identifies the calico-node-windows DaemonSet init container by name.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>resources</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#resourcerequirements-v1-core">
+Kubernetes core/v1.ResourceRequirements
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Resources allows customization of limits and requests for compute resources such as cpu and memory.
+If specified, this overrides the named calico-node-windows DaemonSet init container&rsquo;s resources.
+If omitted, the calico-node-windows DaemonSet will use its default value for this container&rsquo;s resources.
+If used in conjunction with the deprecated ComponentResources, then this value takes precedence.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodSpec">CalicoNodeWindowsDaemonSetPodSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodTemplateSpec">CalicoNodeWindowsDaemonSetPodTemplateSpec</a>)
+
+</p>
+<p>
+CalicoNodeWindowsDaemonSetPodSpec is the calico-node-windows DaemonSet&rsquo;s PodSpec.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>initContainers</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetInitContainer">
+[]CalicoNodeWindowsDaemonSetInitContainer
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+InitContainers is a list of calico-node-windows init containers.
+If specified, this overrides the specified calico-node-windows DaemonSet init containers.
+If omitted, the calico-node-windows DaemonSet will use its default values for its init containers.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>containers</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetContainer">
+[]CalicoNodeWindowsDaemonSetContainer
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Containers is a list of calico-node-windows containers.
+If specified, this overrides the specified calico-node-windows DaemonSet containers.
+If omitted, the calico-node-windows DaemonSet will use its default values for its containers.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>affinity</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#affinity-v1-core">
+Kubernetes core/v1.Affinity
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Affinity is a group of affinity scheduling rules for the calico-node-windows pods.
+If specified, this overrides any affinity that may be set on the calico-node-windows DaemonSet.
+If omitted, the calico-node-windows DaemonSet will use its default value for affinity.
+WARNING: Please note that this field will override the default calico-node-windows DaemonSet affinity.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>nodeSelector</code><br/>
+<em>
+map[string]string
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+NodeSelector is the calico-node-windows pod&rsquo;s scheduling constraints.
+If specified, each of the key/value pairs are added to the calico-node-windows DaemonSet nodeSelector provided
+the key does not already exist in the object&rsquo;s nodeSelector.
+If omitted, the calico-node-windows DaemonSet will use its default value for nodeSelector.
+WARNING: Please note that this field will modify the default calico-node-windows DaemonSet nodeSelector.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>tolerations</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#toleration-v1-core">
+[]Kubernetes core/v1.Toleration
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Tolerations is the calico-node-windows pod&rsquo;s tolerations.
+If specified, this overrides any tolerations that may be set on the calico-node-windows DaemonSet.
+If omitted, the calico-node-windows DaemonSet will use its default value for tolerations.
+WARNING: Please note that this field will override the default calico-node-windows DaemonSet tolerations.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodTemplateSpec">CalicoNodeWindowsDaemonSetPodTemplateSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetSpec">CalicoNodeWindowsDaemonSetSpec</a>)
+
+</p>
+<p>
+CalicoNodeWindowsDaemonSetPodTemplateSpec is the calico-node-windows DaemonSet&rsquo;s PodTemplateSpec
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>metadata</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.Metadata">
+Metadata
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Metadata is a subset of a Kubernetes object&rsquo;s metadata that is added to
+the pod&rsquo;s metadata.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodSpec">
+CalicoNodeWindowsDaemonSetPodSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the calico-node-windows DaemonSet&rsquo;s PodSpec.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.CalicoNodeWindowsDaemonSetSpec">CalicoNodeWindowsDaemonSetSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSet">CalicoNodeWindowsDaemonSet</a>)
+
+</p>
+<p>
+CalicoNodeWindowsDaemonSetSpec defines configuration for the calico-node-windows DaemonSet.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>minReadySeconds</code><br/>
+<em>
+int32
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+MinReadySeconds is the minimum number of seconds for which a newly created DaemonSet pod should
+be ready without any of its container crashing, for it to be considered available.
+If specified, this overrides any minReadySeconds value that may be set on the calico-node-windows DaemonSet.
+If omitted, the calico-node-windows DaemonSet will use its default value for minReadySeconds.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>template</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodTemplateSpec">
+CalicoNodeWindowsDaemonSetPodTemplateSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Template describes the calico-node-windows DaemonSet pod that will be created.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
 <h3 id="operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSet">CalicoWindowsUpgradeDaemonSet</h3>
 <p>
 
@@ -6819,7 +7255,7 @@ string
 <td>
 
 <p>
-When a CSR is issued to the certificates.k8s.io API, the signerName is added to the request to accommodate for clusters
+When a CSR is issued to the certificates.k8s.io API, the signerName is added to the request in order to accommodate for clusters
 with multiple signers.
 Must be formatted as: <code>&lt;my-domain&gt;/&lt;my-signername&gt;</code>.
 </p>
@@ -7037,6 +7473,229 @@ ConditionStatus represents the status of a particular condition. A condition may
 <p>
 ContainerIPForwardingType specifies whether the CNI config for container ip forwarding is enabled.
 </p>
+<h3 id="operator.tigera.io/v1.DashboardsJob">DashboardsJob</h3>
+<p>
+DashboardsJob is the configuration for the Dashboards job.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.DashboardsJobSpec">
+DashboardsJobSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the specification of the dashboards job.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.DashboardsJobContainer">DashboardsJobContainer</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.DashboardsJobPodSpec">DashboardsJobPodSpec</a>)
+
+</p>
+<p>
+DashboardsJobContainer is the Dashboards job container.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>name</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+Name is an enum which identifies the Dashboard Job container by name.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>resources</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#resourcerequirements-v1-core">
+Kubernetes core/v1.ResourceRequirements
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Resources allows customization of limits and requests for compute resources such as cpu and memory.
+If specified, this overrides the named Dashboard Job container&rsquo;s resources.
+If omitted, the Dashboard Job will use its default value for this container&rsquo;s resources.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.DashboardsJobPodSpec">DashboardsJobPodSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.DashboardsJobPodTemplateSpec">DashboardsJobPodTemplateSpec</a>)
+
+</p>
+<p>
+DashboardsJobPodSpec is the Dashboards job&rsquo;s PodSpec.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>containers</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.DashboardsJobContainer">
+[]DashboardsJobContainer
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Containers is a list of dashboards job containers.
+If specified, this overrides the specified Dashboard job containers.
+If omitted, the Dashboard job will use its default values for its containers.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.DashboardsJobPodTemplateSpec">DashboardsJobPodTemplateSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.DashboardsJobSpec">DashboardsJobSpec</a>)
+
+</p>
+<p>
+DashboardsJobPodTemplateSpec is the Dashboards job&rsquo;s PodTemplateSpec
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.DashboardsJobPodSpec">
+DashboardsJobPodSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the Dashboard job&rsquo;s PodSpec.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.DashboardsJobSpec">DashboardsJobSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.DashboardsJob">DashboardsJob</a>)
+
+</p>
+<p>
+DashboardsJobSpec defines configuration for the Dashboards job.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>template</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.DashboardsJobPodTemplateSpec">
+DashboardsJobPodTemplateSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Template describes the Dashboards job pod that will be created.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
 <h3 id="operator.tigera.io/v1.EGWDeploymentContainer">EGWDeploymentContainer</h3>
 <p>
 
@@ -7313,6 +7972,24 @@ TopologySpreadConstraints defines how the Egress Gateway pods should be spread a
 Tolerations is the egress gateway pod&rsquo;s tolerations.
 If specified, this overrides any tolerations that may be set on the EGW Deployment.
 If omitted, the EGW Deployment will use its default value for tolerations.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>priorityClassName</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+PriorityClassName allows to specify a PriorityClass resource to be used.
 </p>
 
 </td>
@@ -9518,6 +10195,310 @@ KubernetesAutodetectionMethod is a method of detecting an IP address based on th
 <p>
 One of: NodeInternalIP
 </p>
+<h3 id="operator.tigera.io/v1.LinseedDeployment">LinseedDeployment</h3>
+<p>
+LinseedDeployment is the configuration for the linseed Deployment.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentSpec">
+LinseedDeploymentSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the specification of the linseed Deployment.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.LinseedDeploymentContainer">LinseedDeploymentContainer</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentPodSpec">LinseedDeploymentPodSpec</a>)
+
+</p>
+<p>
+LinseedDeploymentContainer is a linseed Deployment container.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>name</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+Name is an enum which identifies the linseed Deployment container by name.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>resources</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#resourcerequirements-v1-core">
+Kubernetes core/v1.ResourceRequirements
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Resources allows customization of limits and requests for compute resources such as cpu and memory.
+If specified, this overrides the named linseed Deployment container&rsquo;s resources.
+If omitted, the linseed Deployment will use its default value for this container&rsquo;s resources.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.LinseedDeploymentInitContainer">LinseedDeploymentInitContainer</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentPodSpec">LinseedDeploymentPodSpec</a>)
+
+</p>
+<p>
+LinseedDeploymentInitContainer is a linseed Deployment init container.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>name</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+Name is an enum which identifies the linseed Deployment init container by name.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>resources</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#resourcerequirements-v1-core">
+Kubernetes core/v1.ResourceRequirements
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Resources allows customization of limits and requests for compute resources such as cpu and memory.
+If specified, this overrides the named linseed Deployment init container&rsquo;s resources.
+If omitted, the linseed Deployment will use its default value for this init container&rsquo;s resources.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.LinseedDeploymentPodSpec">LinseedDeploymentPodSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentPodTemplateSpec">LinseedDeploymentPodTemplateSpec</a>)
+
+</p>
+<p>
+LinseedDeploymentPodSpec is the linseed Deployment&rsquo;s PodSpec.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>initContainers</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentInitContainer">
+[]LinseedDeploymentInitContainer
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+InitContainers is a list of linseed init containers.
+If specified, this overrides the specified linseed Deployment init containers.
+If omitted, the linseed Deployment will use its default values for its init containers.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>containers</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentContainer">
+[]LinseedDeploymentContainer
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Containers is a list of linseed containers.
+If specified, this overrides the specified linseed Deployment containers.
+If omitted, the linseed Deployment will use its default values for its containers.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.LinseedDeploymentPodTemplateSpec">LinseedDeploymentPodTemplateSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentSpec">LinseedDeploymentSpec</a>)
+
+</p>
+<p>
+LinseedDeploymentPodTemplateSpec is the linseed Deployment&rsquo;s PodTemplateSpec
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentPodSpec">
+LinseedDeploymentPodSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the linseed Deployment&rsquo;s PodSpec.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.LinseedDeploymentSpec">LinseedDeploymentSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.LinseedDeployment">LinseedDeployment</a>)
+
+</p>
+<p>
+LinseedDeploymentSpec defines configuration for the linseed Deployment.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>template</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.LinseedDeploymentPodTemplateSpec">
+LinseedDeploymentPodTemplateSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Template describes the linseed Deployment pod that will be created.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
 <h3 id="operator.tigera.io/v1.LinuxDataplaneOption">LinuxDataplaneOption
 (<code>string</code> alias)</h3>
 <p>
@@ -9692,7 +10673,7 @@ CollectProcessPathOption
 <em>(Optional)</em>
 <p>
 Configuration for enabling/disabling process path collection in flowlogs.
-If Enabled, this feature sets hostPID to true to read process cmdline.
+If Enabled, this feature sets hostPID to true in order to read process cmdline.
 Default: Enabled
 </p>
 
@@ -10445,6 +11426,8 @@ Ready, Progressing, Degraded or other customer types.
 <a href="#operator.tigera.io/v1.CalicoKubeControllersDeploymentPodTemplateSpec">CalicoKubeControllersDeploymentPodTemplateSpec</a>, 
 <a href="#operator.tigera.io/v1.CalicoNodeDaemonSet">CalicoNodeDaemonSet</a>, 
 <a href="#operator.tigera.io/v1.CalicoNodeDaemonSetPodTemplateSpec">CalicoNodeDaemonSetPodTemplateSpec</a>, 
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSet">CalicoNodeWindowsDaemonSet</a>, 
+<a href="#operator.tigera.io/v1.CalicoNodeWindowsDaemonSetPodTemplateSpec">CalicoNodeWindowsDaemonSetPodTemplateSpec</a>, 
 <a href="#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSet">CalicoWindowsUpgradeDaemonSet</a>, 
 <a href="#operator.tigera.io/v1.CalicoWindowsUpgradeDaemonSetPodTemplateSpec">CalicoWindowsUpgradeDaemonSetPodTemplateSpec</a>, 
 <a href="#operator.tigera.io/v1.TyphaDeployment">TyphaDeployment</a>, 
