--- a/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.4-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.4-release-notes.mdx
@@ -2,7 +2,7 @@
 
 ### Improvements
 
-* Reduced the validity of JSON web tokens issued by Dex to 15 minutes (down from 24 hours).
+* Reduced the validity of JSON Web Tokens issued by dex to 15 minutes (down from 24 hours).
 * Added a configurable option for `priorityClassName` to the egress gateway CRD.
 * Policy recommendation excludes OpenShift namespaces by default.
 
