--- a/calico_versioned_docs/version-3.25/getting-started/openstack/installation/redhat.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/openstack/installation/redhat.mdx
@@ -241,8 +241,7 @@ On each compute node, perform the following steps:
     calico-gen-bird6-conf.sh <compute_node_ipv4> <compute_node_ipv6> <route_reflector_ipv6> <bgp_as_number>
     ```
 
-    You will also need to [configure your route reflector to allow
-    connections from the compute node as a route reflector     client](../../../networking/configuring/bgp.mdx)
+    You will also need to [configure your route reflector to allow connections from the compute node as a route reflector client](../../../networking/configuring/bgp.mdx)
 .
 
     If you _are_ configuring a full BGP mesh you need to handle the BGP
