Even more markdown link fixes

--- a/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -73,7 +73,7 @@ Enabling WAF for certain system services may result in an undesired cluster stat
 #### Enable the Policy Sync API in Felix
 
 If you intend to enable WAF using the CLI rather than in Manager UI, or you have not yet
-[configured L7 logs](../visibility/elastic/l7/Configure), you must enable the Policy Sync API in Felix. To do this cluster-wide,
+[configured L7 logs](../visibility/elastic/l7/configure.mdx), you must enable the Policy Sync API in Felix. To do this cluster-wide,
 modify the `default` FelixConfiguration to set the field `policySyncPathPrefix` to `/var/run/nodeagent`:
 
 ```bash
