--- a/calico-enterprise_versioned_docs/version-3.16/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/threat/web-application-firewall.mdx
@@ -70,7 +70,7 @@ Enabling WAF for certain system services may result in an undesired cluster stat
 
 **Required**
 
-Configure Felix for syncing WAF policy. If you have already [configured L7 logs](../visibility/elastic/l7/Configure), you can ignore this step.
+Configure Felix for syncing WAF policy. If you have already [configured L7 logs](../visibility/elastic/l7/configure.mdx), you can ignore this step.
 
 Enable the Policy Sync API in Felix. To do this cluster-wide, modify the `default` FelixConfiguration to set the field `policySyncPathPrefix` to `/var/run/nodeagent`:
 
