--- a/calico_versioned_docs/version-3.25/networking/openstack/multiple-regions.mdx
+++ b/calico_versioned_docs/version-3.25/networking/openstack/multiple-regions.mdx
@@ -41,8 +41,7 @@ within that same region.
 ## Installation
 
 To install a multi-region OpenStack deployment with Calico, proceed
-region-by-region and follow [the normal procedure for adding Calico to an
-OpenStack region](../../getting-started/openstack/installation/overview.mdx)
+region-by-region and follow [the normal procedure for adding Calico to an OpenStack region](../../getting-started/openstack/installation/overview.mdx)
 ,
 except for these points:
 
