--- a/calico_versioned_docs/version-3.27/getting-started/openstack/installation/redhat.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/openstack/installation/redhat.mdx
@@ -4,7 +4,7 @@ description: Install Calico on OpenStack, Red Hat Enterprise Linux nodes.
 
 # Red Hat Enterprise Linux
 
-import OpenstackEtcdAuth from '@site/calico_versioned_docs/version-3.27/_includes/content/_openstack-etcd-auth.mdx';
+import OpenStackEtcdAuth from '@site/calico_versioned_docs/version-3.27/_includes/content/_openstack-etcd-auth.mdx';
 
 These instructions will take you through a first-time install of
 {{prodname}}. If you are upgrading an existing system, please see
@@ -283,4 +283,4 @@ On each compute node, perform the following steps:
     service calico-felix restart
     ```
 
-<OpenstackEtcdAuth />
+<OpenStackEtcdAuth />
