--- a/calico/getting-started/openstack/installation/ubuntu.mdx
+++ b/calico/getting-started/openstack/installation/ubuntu.mdx
@@ -4,7 +4,7 @@ description: Install Calico on OpenStack, Ubuntu nodes.
 
 # Ubuntu
 
-import OpenstackEtcdAuth from '@site/calico/_includes/content/_openstack-etcd-auth.mdx';
+import OpenStackEtcdAuth from '@site/calico/_includes/content/_openstack-etcd-auth.mdx';
 
 These instructions will take you through a first-time install of
 {{prodname}}. If you are upgrading an existing system, please see
@@ -266,4 +266,4 @@ On each compute node, perform the following steps:
     service calico-felix restart
     ```
 
-<OpenstackEtcdAuth />
+<OpenStackEtcdAuth />
