--- a/calico_versioned_docs/version-3.25/networking/openstack/multiple-regions.mdx
+++ b/calico_versioned_docs/version-3.25/networking/openstack/multiple-regions.mdx
@@ -53,7 +53,7 @@ except for these points:
 
     ```conf
     [global]
-    OpenstackRegion = <region>
+    OpenStackRegion = <region>
     ```
 
     where `<region>` is the name of the region that that compute host belongs to.
@@ -69,7 +69,7 @@ except for these points:
 
 :::note
 
-the value specified for `OpenstackRegion` and `openstack_region`
+the value specified for `OpenStackRegion` and `openstack_region`
 must be a string of lower case alphanumeric characters or '-', starting and
 ending with an alphanumeric character.
 
@@ -83,9 +83,9 @@ for the region will think that there are no working compute nodes.
 
 :::
 
-### Configuring Openstack
+### Configuring OpenStack
 
-You should now create networks in your Openstack regions as normal. e.g.
+You should now create networks in your OpenStack regions as normal. e.g.
 
 ```bash
  neutron net-create --shared calico
