--- a/calico_versioned_docs/version-3.26/networking/openstack/configuration.mdx
+++ b/calico_versioned_docs/version-3.26/networking/openstack/configuration.mdx
@@ -72,7 +72,7 @@ node belongs to.
 
 When specified, the value of `openstack_region` must be a string of lower case alphanumeric
 characters or '-', starting and ending with an alphanumeric character, and must match the value of
-[`OpenstackRegion`](../../reference/felix/configuration.mdx#openstack-specific-configuration)
+[`OpenStackRegion`](../../reference/felix/configuration.mdx#openstack-specific-configuration)
 configured for the Felixes in the same region.
 
 ## ML2 (.../ml2_conf.ini)
