--- a/calico-cloud_versioned_docs/version-19-1/threat/security-posture-overview.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/threat/security-posture-overview.mdx
@@ -53,7 +53,7 @@ This feature is currently part of an active Beta program and will include signif
 
 - The current bias of the dashboard is to include the Image Assurance feature as a contributing risk, even if you do not use the feature. If you are not using Image Assurance, the Cluster Security Score assumes a perfect score (100) for "High Risk Images" and "Unscanned Images" risks. However, Image Assurance is weighted at 50%; although you are not seeing the widest view of risk available without it, you can still make progress with the other 50% contributing risks. To use Image Assurance, see [Image Assurance scanner](../image-assurance/scanners/overview.mdx).
 
-- Currently, the historical score graph does not properly display a single data point, which is the case when the dasbhoard first starts assessing your cluster. With time, the historical graph will properly display data.
+- Currently, the historical score graph does not properly display a single data point, which is the case when the dashboard first starts assessing your cluster. With time, the historical graph will properly display data.
 
 - You cannot customize the dashboard
 
