--- a/calico/reference/installation/_api.mdx
+++ b/calico/reference/installation/_api.mdx
@@ -7281,7 +7281,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detetion.
+configured value, or based on Calico&rsquo;s native auto-detection.
 </p>
 
 </td>
