--- a/calico-enterprise/reference/installation/_api.mdx
+++ b/calico-enterprise/reference/installation/_api.mdx
@@ -14910,7 +14910,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detetion.
+configured value, or based on Calico&rsquo;s native auto-detection.
 </p>
 
 </td>
