--- a/calico-enterprise_versioned_docs/version-3.16/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/reference/installation/_api.mdx
@@ -484,7 +484,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
@@ -3944,7 +3944,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
