--- a/calico-enterprise/reference/installation/_api.mdx
+++ b/calico-enterprise/reference/installation/_api.mdx
@@ -492,7 +492,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
@@ -5177,7 +5177,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
