--- a/calico-enterprise_versioned_docs/version-3.17/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/reference/installation/_api.mdx
@@ -486,7 +486,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
@@ -4098,7 +4098,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
