--- a/calico_versioned_docs/version-3.26/reference/installation/_api.mdx
+++ b/calico_versioned_docs/version-3.26/reference/installation/_api.mdx
@@ -232,7 +232,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
@@ -2304,7 +2304,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
