--- a/calico_versioned_docs/version-3.27/reference/installation/_api.mdx
+++ b/calico_versioned_docs/version-3.27/reference/installation/_api.mdx
@@ -234,7 +234,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
@@ -2485,7 +2485,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
 </p>
 
 </td>
