--- a/calico-cloud/operations/monitor/metrics/recommended-metrics.mdx
+++ b/calico-cloud/operations/monitor/metrics/recommended-metrics.mdx
@@ -459,7 +459,7 @@ The following policy metrics are a separate endpoint exposed by Felix that are u
 | Metric                           | <code>felix_logs_dropped</code>                                         |
 | Example value                    | <code>felix_logs_dropped\{<strong>endpoint</strong>="metrics-port", <strong>instance</strong>="10.0.1.20:9091", <strong>job</strong>="felix-metrics-svc", <strong>namespace</strong>="calico-system", <strong>pod</strong>="calico-node-qzpkt", <strong>service</strong>="felix-metrics-svc"\} 0</code> |
 | Explanation                      | The number of logs Felix has dropped. Note that this metric does not count flow-logs; it counts logs to stdout. |
-| Threshold value recommendation   | Occasional drops are normal.  Investigate if drop counters rapidily rise. |
+| Threshold value recommendation   | Occasional drops are normal.  Investigate if drop counters rapidly rise. |
 | Threshold breach symptoms        | Felix will drop logs if it cannot keep up with writing them out.  These are ordinary code logs, not flow logs.  Calico-node may be under resource constraints. |
 | Threshold breach recommendations | Check CPU usage on calico-nodes and Kubernetes nodes.  Increase resources if needed, and rollout restart calico-node(s) if needed. |
 | Priority level                   | Optional.                                                    |
