--- a/calico-enterprise_versioned_docs/version-3.19-1/reference/resources/securityeventwebhook.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/reference/resources/securityeventwebhook.mdx
@@ -75,7 +75,7 @@ The value must conform to the following rules:
 | Field        | Description                                                                | Schema                                                                      | Required                            |
 | ------------ | -------------------------------------------------------------------------- | --------------------------------------------------------------------------- | ----------------------------------- |
 | name         | Configuration variable name.                                               | string                                                                      | yes                                 |
-| value        | Direct value for the variable.                                             | string                                                                      | yes if `valueFrom` is not specifed  |
+| value        | Direct value for the variable.                                             | string                                                                      | yes if `valueFrom` is not specified  |
 | valueFrom    | Value defined either in a Kubernetes ConfigMap or in a Kubernetes Secret. | [SecurityEventWebhookConfigVarSource](#securityeventwebhookconfigvarsource) | yes if `value` is not specified     |
 
 ### SecurityEventWebhookConfigVarSource
@@ -83,7 +83,7 @@ The value must conform to the following rules:
 | Field            | Description                       | Schema                                                                                                       | Required                                  |
 | ---------------- | --------------------------------- | ------------------------------------------------------------------------------------------------------------ | ----------------------------------------- |
 | configMapKeyRef  | Kubernetes ConfigMap reference.   | `ConfigMapKeySelector` (referenced ConfigMap key should exist in the `tigera-intrusion-detection` namespace) | yes if `secretKeyRef` is not specified    |
-| secretKeyRef     | Kubernetes Secret reference.      | `SecretKeySelector` (referenced Secret key should exist in the `tigera-intrusion-detection` namespace)       | yes if `configMapKeyRef` is not specifed  |
+| secretKeyRef     | Kubernetes Secret reference.      | `SecretKeySelector` (referenced Secret key should exist in the `tigera-intrusion-detection` namespace)       | yes if `configMapKeyRef` is not specified  |
 
 ### Status
 
