--- a/calico_versioned_docs/version-3.27/operations/ebpf/install.mdx
+++ b/calico_versioned_docs/version-3.27/operations/ebpf/install.mdx
@@ -59,7 +59,7 @@ Limitations:
 
   - Dual stack is not supported. However, ipv4 traffic is allowed into hosts (not workloads) because many managed Kubernetes environments have ipv4-based control plane.
   - `doNotTrack` policies (xdp) are not supported
-  - IPIP is not supported ({{prodname}} iptables does not supporte it either). VXLAN is the recommended overlay for eBPF mode.
+  - IPIP is not supported ({{prodname}} iptables does not support it either). VXLAN is the recommended overlay for eBPF mode.
 
 To enable IPv6 in eBPF mode, see [Configure dual stack or IPv6 only](../../networking/ipam/ipv6.mdx). You may be able to run with non-Calico IPAM. eks-cni is known to work.
 
