--- a/calico-cloud_versioned_docs/version-19-1/operations/ebpf/enabling-ebpf.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/operations/ebpf/enabling-ebpf.mdx
@@ -230,7 +230,7 @@ resource to `"BPF"`.
 kubectl patch installation.operator.tigera.io default --type merge -p '{"spec":{"calicoNetwork":{"linuxDataplane":"BPF"}}}'
 ```
 
-When enabling eBPF mode, pre-existing connections continue to use the non-BPF datapath; such connections should
+When enabling eBPF mode, preexisting connections continue to use the non-BPF datapath; such connections should
 not be disrupted, but they do not benefit from eBPF mode’s advantages.
 
 :::note
