--- a/calico_versioned_docs/version-3.27/operations/ebpf/enabling-ebpf.mdx
+++ b/calico_versioned_docs/version-3.27/operations/ebpf/enabling-ebpf.mdx
@@ -343,7 +343,7 @@ calicoctl patch felixconfiguration default --patch='{"spec": {"bpfEnabled": true
 
 </Tabs>
 
-When enabling eBPF mode, pre-existing connections continue to use the non-BPF datapath; such connections should
+When enabling eBPF mode, preexisting connections continue to use the non-BPF datapath; such connections should
 not be disrupted, but they do not benefit from eBPF mode’s advantages.
 
 ### Try out DSR mode
